--- a/src/ReservaAFS.Api/appsettings.Development.json
+++ b/src/ReservaAFS.Api/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "Connection": "Server=localhost;Database=cashflowdb;Uid=root;Pwd=passRootword_1"
     }
-  }
 }
