fix: Fixing the namespace

--- a/src/ReservaAFS.Api/appsettings.Development.json
+++ b/src/ReservaAFS.Api/appsettings.Development.json
@@ -6,6 +6,6 @@
         }
     },
     "ConnectionStrings": {
-        "Connection": "Server=localhost;Database=cashflowdb;Uid=root;Pwd=passRootword_1"
+        "Connection": "Server=localhost;Database=reservaafsdb;Uid=root;Pwd=passRootword_1"
     }
 }
