feat: Implementing get by id endpoint

--- a/src/ReservaAFS.Exception/ReservaAFS.Exception.csproj
+++ b/src/ReservaAFS.Exception/ReservaAFS.Exception.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Update="ResourceErrorMessages.pt-br.resx">
+    <EmbeddedResource Update="ResourceErrorMessages.pt-BR.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="ResourceErrorMessages.resx">
