--- a/src/ReservaAFS.Application/ReservaAFS.Application.csproj
+++ b/src/ReservaAFS.Application/ReservaAFS.Application.csproj
@@ -18,4 +18,16 @@
     <ProjectReference Include="..\ReservaAFS.Exception\ReservaAFS.Exception.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="UseCases\Equipments\Create\" />
+    <Folder Include="UseCases\Equipments\Delete\" />
+    <Folder Include="UseCases\Equipments\GetAll\" />
+    <Folder Include="UseCases\Equipments\GetById\" />
+    <Folder Include="UseCases\Equipments\Update\" />
+    <Folder Include="UseCases\Users\Delete\" />
+    <Folder Include="UseCases\Users\GetAll\" />
+    <Folder Include="UseCases\Users\GetById\" />
+    <Folder Include="UseCases\Users\Update\" />
+  </ItemGroup>
+
 </Project>
